--- a/web/material/css/premise.css
+++ b/web/material/css/premise.css
@@ -17,14 +17,15 @@ body {
       font-size: small;
       border-radius: 8px;
       border: #FFFFFD solid 1px;
-      margin: 25px 10% 5px 10%; }
+      margin: 25px 8% 5px 8%;
+      padding-bottom: 3px; }
       body .page .ui-content .qr-code .description h3 {
         color: #FFFFFD;
         margin: -10px auto 10px auto;
         font-size: 15px;
         font-weight: bold;
         background-color: #B8CD53;
-        width: 150px;
+        width: 160px;
         padding: 0 15px; }
       body .page .ui-content .qr-code .description p {
         margin: 0 auto;
@@ -104,5 +105,56 @@ body {
     body .page .ui-content .coupon .detail {
       font-size: 15px;
       font-weight: lighter; }
+  body .page .ui-content .selling-characters {
+    margin-top: 6px;
+    border-radius: 5px;
+    text-align: left;
+    background-color: #5CB3DF;
+    color: white; }
+    body .page .ui-content .selling-characters .sell-header {
+      padding-top: 6px; }
+      body .page .ui-content .selling-characters .sell-header img {
+        float: left;
+        width: 23px;
+        height: 23px;
+        margin-left: 10px;
+        vertical-align: text-bottom; }
+      body .page .ui-content .selling-characters .sell-header .sell-title {
+        font-size: 18px;
+        font-weight: bolder; }
+    body .page .ui-content .selling-characters .selling-character-desc {
+      line-height: 25px; }
+    body .page .ui-content .selling-characters ul {
+      padding-left: 35px;
+      margin: 8px auto; }
+      body .page .ui-content .selling-characters ul li {
+        margin-right: 8px; }
+  body .page .ui-content .premise-type {
+    margin-top: 8px;
+    background-color: #FFFFFF;
+    border-radius: 5px; }
+    body .page .ui-content .premise-type .premise-type-header {
+      padding-top: 6px;
+      text-align: left; }
+      body .page .ui-content .premise-type .premise-type-header .header-pic {
+        float: left;
+        width: 23px;
+        height: 23px;
+        margin-left: 10px;
+        vertical-align: text-bottom; }
+      body .page .ui-content .premise-type .premise-type-header .header {
+        font-size: 18px;
+        font-weight: bold; }
+    body .page .ui-content .premise-type img {
+      width: 100%;
+      height: 100%; }
+    body .page .ui-content .premise-type .type-pic {
+      width: 100%;
+      height: auto; }
+    body .page .ui-content .premise-type .project-address {
+      color: #9D9B9C; }
+      body .page .ui-content .premise-type .project-address .address {
+        font-size: 13px;
+        font-weight: lighter; }
 
 /*# sourceMappingURL=premise.css.map */
