--- a/web/material/css/manage.scss
+++ b/web/material/css/manage.scss
@@ -22,22 +22,36 @@ body {
           margin: -11px auto 10px auto;
           background-color: #FFFFDF;
           width: 50%;
-          font-size: 20px;
+          font-size: 23px;
         }
         .authentication {
-          font-size: 15px;
+          font-size: 20px;
           .login-form {
             margin: 5px 5% 5px 5%;
-            line-height: 35px;
+            line-height: 40px;
             .form-unit {
               width: 80%;
-              margin: 1px 10% 1px 10%;
+              margin: 3px 10% 3px 10%;
               letter-spacing: 2px;
               label {
                 padding: 0 3px;
                 width: 100px;
               }
-
+              input[type="text"], input[type="password"] {
+                border-radius: 3px;
+                width: 50%;
+                line-height: 27px;
+                border: 1px solid #5A0075;
+              }
+            }
+            .confirm {
+              height: 35px;
+              input[type="submit"] {
+                width: 25%;
+                font-size: 23px;
+                letter-spacing: 2px;
+                padding: 0;
+              }
             }
           }
         }
