--- a/web/material/css/manage.scss
+++ b/web/material/css/manage.scss
@@ -1,3 +1,65 @@
 body {
+  background-color: #FFFFDF;
+  box-sizing: border-box;
+  color: #666;
+  header {
+    .header-brand {
+      padding: 0 10px;
+      float: left;
+      font-size: 18px;
+      height: 50px;
+      line-height: 50px;
+    }
+  }
+  .admin-header {
+    display: table;
+    font-size: 1.4rem;
+    margin-bottom: 0;
+    position: relative;
+    width: 100%;
+    min-height: 50px;
+    color: #666;
+    border-bottom: solid 1px #dddddd;
+  }
 
+  .admin-header::before, .admin-header::after {
+    display: table;
+  }
+
+  .admin-header::after {
+    clear: both;
+  }
+
+  .header-collapse {
+    float: right;
+    margin: 15px 10px 0 0;
+    box-sizing: border-box;
+    padding: 0;
+    list-style: none;
+    font-size: 13px;
+    vertical-align: bottom;
+    ul {
+      margin: 0px;
+      padding-left: 2px;
+      display: block;
+      list-style-type: none;
+      li {
+        float: left;
+        a {
+          margin: 0 5px;
+        }
+        .username {
+          font-size: 16px;
+        }
+      }
+    }
+  }
+
+  .ui-content {
+    margin-top: 10px;
+    padding: 0 10px;
+    border-radius: 5px;
+    border: 1px solid #dddddd;
+    clear: both;
+  }
 }
