--- a/web/material/css/manage.scss
+++ b/web/material/css/manage.scss
@@ -61,5 +61,22 @@ body {
     border-radius: 5px;
     border: 1px solid #dddddd;
     clear: both;
+    .admin-navigator {
+      width: 100%;
+      height: 30px;
+      .operation-list {
+        ul {
+          list-style-type: none;
+          li {
+            a {
+
+            }
+          }
+        }
+        .admin-operation-list {
+
+        }
+      }
+    }
   }
 }
