--- a/web/material/css/premise.css
+++ b/web/material/css/premise.css
@@ -77,12 +77,14 @@ body {
       line-height: 25px; }
   body .page .ui-content .premise-pic-area {
     margin-top: 2px;
-    height: 160px;
     width: 100%;
     border-radius: 5px; }
+    body .page .ui-content .premise-pic-area img {
+      height: 100%;
+      width: 100%; }
     body .page .ui-content .premise-pic-area .premise-pic {
       width: 100%;
-      height: 100%;
+      height: auto;
       border-radius: 5px; }
   body .page .ui-content .coupon {
     margin-top: 3px;
