--- a/web/material/css/premise.scss
+++ b/web/material/css/premise.scss
@@ -97,12 +97,15 @@ body {
 
       .premise-pic-area {
         margin-top: 2px;
-        height: 160px;
         width: 100%;
         border-radius: 5px;
+        img {
+          height: 100%;
+          width: 100%;
+        }
         .premise-pic {
           width: 100%;
-          height: 100%;
+          height: auto;
           border-radius: 5px;
         }
       }
