--- a/web/material/css/premise.scss
+++ b/web/material/css/premise.scss
@@ -5,8 +5,7 @@ body {
     .ui-content {
       .qr-code {
         background-color: #B8CD53;
-        border-top-left-radius: 5px;
-        border-top-right-radius: 5px;
+        border-radius: 5px;
         text-align: center;
         padding-bottom: 5px;
         .qr-pic-wrapper {
@@ -45,12 +44,18 @@ body {
         }
       }
       .approach-money {
-        padding-top: 10px;
-        padding-bottom: 15px;
+        margin-top: 6px;
         background-color: #0099A2;
+        border-radius: 5px;
         color: #FFFFFD;
-        border-bottom-left-radius: 5px;
-        border-bottom-right-radius: 5px;
+        img {
+          height: 100%;
+          width: 100%;
+        }
+        .slogan-pic {
+          width: 100%;
+          height: auto;
+        }
         .slogan {
           font-weight: bold;
           .slogan-company {
@@ -77,7 +82,6 @@ body {
         color: #FFFFFD;
         .price-premise {
           float: left;
-          vertical-align: center;
           font-size: 11px;
           margin-left: 10px;
           line-height: 25px;
@@ -88,7 +92,6 @@ body {
         }
         .status {
           float: right;
-          vertical-align: center;
           font-size: 11px;
           margin-right: 10px;
           line-height: 25px;
@@ -115,6 +118,7 @@ body {
         background-color: #F1656B;
         color: #FFFFFD;
         border-radius: 5px;
+        padding: 3px 0;
         .title {
           font-weight: bold;
           font-size: 19px;
